--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 = JS-compat
 
 JS-compat is an obstrusive javascript library that aims at
-fixing, implementing and emulating standard javascript and
+fixing, implementing and emulating standard JavaScript and
 DOM in older browsers.
 
 
@@ -10,11 +10,9 @@ DOM in older browsers.
 
 The basic idea is to permit a developer to run some
 pure javascript and DOM code in Internet Explorer without
-even thinking about it.
-
-I like to see my code run with (nearly) no change on the
-different standard compliant browsers in the market. Problem
-is Internet Explorer.
+even thinking about it. I like to see my code run with
+(nearly) no change on the different standard compliant
+browsers in the market. Problem is Internet Explorer.
 
 A lot of libraries are creating whole framework to 'fix'
 all browsers. It implies to learn a complete new syntaxes,
@@ -26,23 +24,25 @@ just fix things the way standards say they must be.
 
 == DOM prototypes in IE < 8
 
-The prefered way to extend objects in JavaScript, is throught
-the prototype. Problem is IE doesn't implement DOM prototypes,
-like Element and Event, before IE8. Thus when Element and Event
-are undefined, JS-compat emulates them.
+The prefered way to extend objects in JavaScript is throught
+objects' prototype. JavaScript is all about prototypes. Problem
+is IE doesn't implement the DOM prototypes, like Element and
+Event, before IE8. JS-compat thus emulates Element and Event
+when they're undefined.
 
 For instance, if you wish to create a hide() method available
-for all elements, just do this:
+for all elements, just do:
 
  Element.prototype.hide = function() {
    // ...
  }
 
 The following problem is elements and events won't be extended
-automatically. You have to extend them manually. We don't want
-to think about that, so JS-compat interfaces the basic methods,
-like document.getElementById or elm.getElementsByTagName, to
-always return already extended elements.
+automatically, and you thus have to extend them manually. We
+don't want to have to think about that, so JS-compat interfaces
+the basic methods, like document.getElementById or
+elm.getElementsByTagName, to always return already extended
+elements.
 
 So you can do:
 
@@ -55,9 +55,8 @@ Internet Explorer (even IE8) lacks support for DOM Events, and
 still relies on attachEvent, detachEvent, etc. Js-compat thus
 implements them. Support is limited to the bubbling mode only.
 The capture mode seems harder to emulate and isn't available
-yet (but might be doable).
-
-It's also not possible to manually create and fire events.
+yet (but might be doable). It's also not possible to manually
+create and fire events.
 
 JS-compat also fixes the Event object passed to the callback
 --in fact IE doesn't even pass any Event object. All the
@@ -85,8 +84,7 @@ related attributes, like firstChild, nextSibling or parentNode?
 Possible solutions are:
 
 * manually extend them (eg: misago.$(elm.parentNode));
-* implement a get(attribute) method that will always
-   return extended elements.
+* implement a get(attribute) method that will always return extended elements.
 
 The same question arises for the emulation of Firefox 3.5's
 children, countElementChild, lastElementChild, etc. attributes.
