--- a/TODO
+++ b/TODO
@@ -8,16 +8,6 @@ TODO:
     XMLHttpRequest. Maybe if it transparently supported XML and JSON I'd like it
     better :)
 
-  * Core could just be a feature support check tool only. It would check the presence
-    of a feature (let's say the JSON object), and if it's lacking, or broken somehow,
-    it shall compile a list of javascript files to be download and eventually insert
-    them --using a server script that would cache a compressed version for instance.
-    
-    That way new browsers wouldn't have to download and process a lot of scripts.
-    Maybe it could speed up the initial page load time? Or maybe it's just stupid,
-    and I shall better rely on IE's conditional comments: one for IE6/7, one for IE8
-    and one for the other browsers.
-
 
 IE bugs :
 
@@ -26,30 +16,26 @@ IE bugs :
     
     Quick fix: check for 'elm.parentNode' and 'elm.parentNode.tagName'.
     
-    Maybe I can fix it somehow  by overwriting document.createElement,
+    Maybe I can fix it somehow by overwriting document.createElement,
     document.removeChild and document.removeNode?
 
   * 'window' is just useless in IE. You can't get any viewport information out of it.
     You can't bind events (they won't be called). You have to check
-    'document.documentElement' instead, leading to some burden to the developer: she
-    needs to check out the presence of document.documentElement to choose the one to
-    use.
+    'document.documentElement' instead, leading to some burden to the developer: you
+    need to check out the presence of document.documentElement :/
     
-    I can fix the events, by transparently binding document.documentElement instead
-    of the window object. For instance:
+    I could fix the events, by transparently binding document.documentElement instead
+    of the window object.
     
-    window.addEventListener = function(type, fn, useCapture) {
-      return document.documentElement.addEventListener(type, fn, useCapture);
-    }
-    
-    I can fix missing values in IE8, using getters. But... what about IE6-7? Maybe
-    throught another 'get(attribute)' method? :(
+    I can also fix missing values in IE8, using getters. But... what about IE6-7?
+    Maybe throught another 'get(attribute)' method? :(
 
 
 IE 8 bugs :
 
   * In order to be sure to use IE8's engine (and not a compatibility view or whatever)
-    you better declare the X-UA-Compatible HTTP meta. Otherwise, expect problems.
+    you better declare the X-UA-Compatible HTTP meta (and a valid doctype). Otherwise,
+    expect problems.
     
     I personally use: <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
