--- a/README.rdoc
+++ b/README.rdoc
@@ -28,26 +28,14 @@ It works in all browsers I've tested. That's all I'm asking.
 Kokone is currently separated in 3 parts :
 
 * Compat tries to fix, emulate and implement broken and missing features (yes it's obstrusive).
-* Addons adds a few methods that I think are missing.
-* UI proposes some user interface widgets, like dialogs, tooltips, autocompleters, date pickers, etc (this one is not obstrusive).
+* Addons adds a few methods that I think are missing (also pobstrusive).
+* UI proposes some user interface widgets, like dialogs, tooltips, autocompleters, date pickers, etc (lives in it's own namespace).
 
-I feel bad about the Addons part, since it goes back to having a library,
+I feel bad about the Addons part since it goes back to having a library,
 but writing Kokone::UI I felt the necessity to abstract some code out of
 it. So I did it.
 
 You may use Compat or Compat + Addons, or Compat + Addons + UI, or simply
 parts of these -- just be sure not to miss any requirements.
-
-
-== TODO
-
-* A Drag And Drop library (is it possible to follow the standards?)
-* An animation library (Fx) to enable some DHTML.
-
-
-== COULD DO
-
-* A charting library to draw charts --something that uses SVG and Canvas.
-* A game library, with sprite animations, etc.
 
 
