--- a/TODO
+++ b/TODO
@@ -13,8 +13,8 @@ TODO:
   
   * An animation library (Fx) to enable some DHTML.
   
-  * TODO: Implement custom events (as defined by the DOM).
-    See http://deanedwards.me.uk/weblog/2009/03/callbacks-vs-events/.
+  * Implement custom events (as defined by the DOM).
+    See http://deanedwards.me.uk/weblog/2009/03/callbacks-vs-events/ for a solution.
 
 COULD DO:
 
