--- a/compat/README.rdoc
+++ b/compat/README.rdoc
@@ -18,7 +18,9 @@ A lot of libraries are creating whole framework to 'fix'
 all browsers. It implies to learn complete new syntaxes,
 and doesn't help you to learn either what JavaScript or
 the DOM is. I wanted something that is just DOM and
-JavaScript. That's the reason why it's obstrusive: let's
+JavaScript.
+
+That's the reason why it's obstrusive: let's
 just fix things the way standards say they must be.
 
 
@@ -53,10 +55,10 @@ So you can do:
 
 Internet Explorer (even IE8) lacks support for DOM Events, and
 still relies on attachEvent, detachEvent, etc. Kokone::Compat
-thus implements them. Support is limited to the bubbling mode only.
+thus implements them. Support is limited to bubbling mode only.
 The capture mode seems harder to emulate and isn't available
 yet (but might be doable). It's also not possible to manually
-create and fire events.
+create and fire events (patches are welcome).
 
 Kokone::Compat also fixes the Event object passed to the callback
 --in fact IE doesn't even pass any Event object. All the
@@ -79,11 +81,11 @@ it without relying on ugly hacks (see
 http://alex.dojotoolkit.org/08/jscript/lettable.html ). This
 fact leads to some difficulties.
 
-For instance, how to return extended elements in IE6/7 for
+For instance: how to return extended elements in IE6/7 for
 related attributes, like firstChild, nextSibling or parentNode?
-Possible solutions are:
+Available solutions are:
 
-* manually extend them (eg: misago.$(elm.parentNode));
+* manually extend them (eg: kokone.$(elm.parentNode));
 * implement a get(attribute) method that will always return extended elements.
 
 The same question arises for the emulation of Firefox 3.5's
@@ -91,9 +93,10 @@ children, countElementChild, lastElementChild, etc. attributes.
 Those can be emulated throught getters in most browsers, but
 not in IE6 and IE7. Sadly :(
 
-So use whatever method you prefer: use the get(attribute) method
-if you care about IE6/7; or just don't think about it if you don't
-care about IE6/7.
+So use whatever method you prefer:
+
+* you don't care about IE 6/7? just use attributes like the DOM says so;
+* you care about IE 6/7? use elm.get(attribute).
 
 
 == Backward compatibility
@@ -126,6 +129,6 @@ or started on load. For instance:
   }, false);
   </script>
 
-If excanvas.js is loaded, created elements will be automatically extended
-(thanks to Kokone::Compat).
+If excanvas.js is loaded (before Kokone::Compat that is), created elements
+will be automatically extended.
 
